<resources>
    <string name="app_name">ChallengeTwo</string>
    <string name="search">Search</string>
    <string name="inst">Enter a search radius in miles to look for a place to eat!</string>
    <string name="RnD">Radius (# in miles)</string>
    <string name="loading">Loading…</string>
    <string name="location_permission_denied">Location permissions denied, please enable the permissions to use this app.</string>
    <string name="need_location">This App requires location services to function, as it uses your approximate location to find places around you with the Google Places API. Please Enable location functionality below.</string>
    <string name="request">Request Location</string>
    <string name="mapbutton">See in Google Maps</string>
    <string name="nextplace">Next Place</string>
    <string name="prevplace">Last Place</string>
</resources>